--- a/gb/ncid282_4.md
+++ b/gb/ncid282_4.md
@@ -20,7 +20,13 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank">白宫：若朝鲜试射远程导弹 美将采取行动</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753606.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LO3OB-150x120.jpg" align ="left"></a>白宫国家安全顾问罗伯特?奥布赖恩（Robert O’Brien）周日（12月29日）表示，如果朝鲜试射远程导弹或核导弹，美国将感到非常失望，并采取适当行动。他还表示，金正恩可能已经重新考虑了他的“圣诞礼物”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 10:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753463.md#1" target="_blank">台大选辩论 聚焦一国两制、香港、反渗透法</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8d1b02a8674858ec0ef713c1be3f5566-600x400-1-150x120.jpg" align ="left"></a>2020年台湾总统大选唯一一场电视辩论会29日下午登场，三位候选人主要聚焦：台湾主权、抵制中共的“一国两制，九二共识”，香港问题以及台湾的《反渗透法》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 9:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753758.md#1" target="_blank">美情报助俄破获恐怖袭击 普京致电感谢川普</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753758.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1HY0OT-150x120.jpg" align ="left"></a>克里姆林宫表示，俄罗斯总统普京周日（12月29日）在与美国总统川普通电话时，就美方提供情报，帮助俄国抓到嫌疑人，阻止一场恐怖袭击案的发生，亲自向川普总统表示感谢。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753643.md#1" target="_blank">汤唯面对镜头洒泪 揭开女星不为人知的尴尬</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753643.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/07/1-362-150x120.jpg" align ="left"></a>具有知性优雅气质的大陆女星汤唯，在前不久的一次受访中对着镜头不禁洒泪，意外揭开了女星们不为人知的尴尬，引发热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11767938.md#1" target="_blank">广西南宁一幼儿园老师虐童</a><br></h3>1月3日，网络上传出一段广西南宁市一幼儿园教师虐童视频，引起外界关注。
+
+据梨视频消息，涉事幼儿园为南宁市安吉大道西津村西津幼儿园，在午休时间，一幼师走到一名小孩的床前，用力拉扯他的手臂，又将他拖落地面；她之后又对另一名小孩发脾气，将对方的枕头扔到角落。
+
+视频传出后，许多家长均反映自己的小孩曾遭老师暴力对待。目前，该幼师已被警方带走调查。
+
+责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11767423.md#1" target="_blank">大批明星搭机资料遭国航员工泄露</a><br></h3>日前，中国国际航空公司证实有员工外泄数位明星的飞行纪录。目前，该员工已被做出停飞处分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/3/n11764636.md#1" target="_blank">每日三退声明精选（2020/01/02）</a><br></h3>大学时，一句入党好，被欺骗提交入党申请书，参加了党课学习，在党员转正时候就察觉到班党委阶级斗争，埋下了党权利熏心种子；工作后，境外网站发布社会牢骚，被派出所秋后算账请去喝茶，更是觉得抱怨的牢骚一点错都没有；现在隐蔽的查询共匪的过去事实，真是原来真想这么邪恶，现在已经不再对共匪会给社会带来实惠报任何幻想，本人声明退出共匪组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/2/n11761858.md#1" target="_blank">每日三退声明精选（2020/01/01）</a><br></h3>痛恨邪恶的共产党，历史上从没有过的邪恶和反人类的政党，满口谎言，整天喊着为人民服务，其实是人民在为它服务！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 11:36 AM							</td></tr>
